# stop-nagging

./: .gitignore  Cargo.toml  README.md  cargo.toml  tools.yaml
.github/ci/workflows/: build.yml
.github/workflows/: ci.yml  installation_test.yml
scripts/: install_stop_nagging.ps1  install_stop_nagging.sh
src/: README.md  cli.rs  config.rs  errors.rs  lib.rs  main.rs  platform.rs  runner.rs  yaml_config.rs
tests/: installer_test.rs  integration_test.rs  node_e2e_test.rs  runner_test.rs  yaml_config_test.rs
tests/test_files/: node_e2e.yaml  sample_tools.yaml
tests/test_files/nagging-package/: package.json
