[package]
name = "stop-nagging"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to silence or disable upgrade/advertising nags from various development tools and CLIs."
license = "MIT"
repository = "https://github.com/bodo-run/stop-nagging"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.0"
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
strip = true  # Strip symbols from binary
opt-level = 3 # Maximum optimization
